--- a/index.html
+++ b/index.html
@@ -1,34 +1,38 @@
 <!DOCTYPE html>
 <html class="no-js">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <title>Column-experiment</title>
     <meta name="description" content=""/>
-    <link href="css.css" rel="stylesheet" media="screen" />
+    <link href="css.css" rel="stylesheet" media="screen"/>
 </head>
 <body>
+<h1>Fluid text column experiment</h1>
+
+<h2>Resize window width. Pure css solution.</h2>
+
 <div class="column-text">
     <div class="column-text-wrap">
-        <div class="column-text-wrap-1">
-            <div class="column-text-wrap-2">
-                <p>Эксимер концентрирует квант. Экситон облучает вихревой пульсар. Вихрь представляет собой межатомный гамма-квант. Бозе-конденсат тормозит взрыв.</p>
+        <div class="column-text-helper">
+            <div class="column-text-helper">
+                <p>One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections. The bedding was hardly able to cover it and seemed ready to slide off any moment.</p>
 
-                <p>Резонатор, как можно показать с помощью не совсем тривиальных вычислений, концентрирует луч. Многочисленные расчеты предсказывают, а эксперименты подтверждают, что струя сжимает объект в том случае, когда процессы переизлучения спонтанны. Излучение мгновенно. Волновая тень, как бы это ни казалось парадоксальным, конфокально излучает экзотермический объект. Под воздействием переменного напряжения плазма тормозит барионный фронт в полном соответствии с законом сохранения энергии. Исследователями из разных лабораторий неоднократно наблюдалось, как кристалл сингулярно синхронизует тахионный резонатор вне зависимости от предсказаний самосогласованной теоретической модели явления.</p>
+                <p>His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked. "What's happened to me? " he thought. It wasn't a dream. His room, a proper human room although a little too small, lay peacefully between its four familiar walls. A collection of textile samples lay spread out on the table - Samsa was a travelling salesman - and above it there hung a picture that he had recently cut out of an illustrated magazine and housed in a nice, gilded frame.</p>
 
-                <p>Галактика масштабирует внутримолекулярный экситон. Вещество индуцирует солитон. Линза синхронизует коллапсирующий пульсар в том случае, когда процессы переизлучения спонтанны. Расслоение индуцирует ультрафиолетовый лазер одинаково по всем направлениям.</p>
+                <p>It showed a lady fitted out with a fur hat and fur boa who sat upright, raising a heavy fur muff that covered the whole of her lower arm towards the viewer. Gregor then turned to look out the window at the dull weather. Drops of rain could be heard hitting the pane, which made him feel quite sad. "How about if I sleep a little bit longer and forget all this nonsense", he thought, but that was something he was unable to do because he was used to sleeping on his right, and in his present state couldn't get into that position. However hard he threw himself onto his right, he always rolled back to where he was. He must have tried it a hundred times, shut his eyes so that he wouldn't have to look at the floundering legs, and only stopped when</p>
             </div>
-            <p>Эксимер концентрирует квант. Экситон облучает вихревой пульсар. Вихрь представляет собой межатомный гамма-квант. Бозе-конденсат тормозит взрыв.</p>
+            <p>One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections. The bedding was hardly able to cover it and seemed ready to slide off any moment.</p>
 
-            <p>Резонатор, как можно показать с помощью не совсем тривиальных вычислений, концентрирует луч. Многочисленные расчеты предсказывают, а эксперименты подтверждают, что струя сжимает объект в том случае, когда процессы переизлучения спонтанны. Излучение мгновенно. Волновая тень, как бы это ни казалось парадоксальным, конфокально излучает экзотермический объект. Под воздействием переменного напряжения плазма тормозит барионный фронт в полном соответствии с законом сохранения энергии. Исследователями из разных лабораторий неоднократно наблюдалось, как кристалл сингулярно синхронизует тахионный резонатор вне зависимости от предсказаний самосогласованной теоретической модели явления.</p>
+            <p>His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked. "What's happened to me? " he thought. It wasn't a dream. His room, a proper human room although a little too small, lay peacefully between its four familiar walls. A collection of textile samples lay spread out on the table - Samsa was a travelling salesman - and above it there hung a picture that he had recently cut out of an illustrated magazine and housed in a nice, gilded frame.</p>
 
-            <p>Галактика масштабирует внутримолекулярный экситон. Вещество индуцирует солитон. Линза синхронизует коллапсирующий пульсар в том случае, когда процессы переизлучения спонтанны. Расслоение индуцирует ультрафиолетовый лазер одинаково по всем направлениям.</p>
+            <p>It showed a lady fitted out with a fur hat and fur boa who sat upright, raising a heavy fur muff that covered the whole of her lower arm towards the viewer. Gregor then turned to look out the window at the dull weather. Drops of rain could be heard hitting the pane, which made him feel quite sad. "How about if I sleep a little bit longer and forget all this nonsense", he thought, but that was something he was unable to do because he was used to sleeping on his right, and in his present state couldn't get into that position. However hard he threw himself onto his right, he always rolled back to where he was. He must have tried it a hundred times, shut his eyes so that he wouldn't have to look at the floundering legs, and only stopped when</p>
         </div>
-        <p>Эксимер концентрирует квант. Экситон облучает вихревой пульсар. Вихрь представляет собой межатомный гамма-квант. Бозе-конденсат тормозит взрыв.</p>
+        <p>One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections. The bedding was hardly able to cover it and seemed ready to slide off any moment.</p>
 
-        <p>Резонатор, как можно показать с помощью не совсем тривиальных вычислений, концентрирует луч. Многочисленные расчеты предсказывают, а эксперименты подтверждают, что струя сжимает объект в том случае, когда процессы переизлучения спонтанны. Излучение мгновенно. Волновая тень, как бы это ни казалось парадоксальным, конфокально излучает экзотермический объект. Под воздействием переменного напряжения плазма тормозит барионный фронт в полном соответствии с законом сохранения энергии. Исследователями из разных лабораторий неоднократно наблюдалось, как кристалл сингулярно синхронизует тахионный резонатор вне зависимости от предсказаний самосогласованной теоретической модели явления.</p>
+        <p>His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked. "What's happened to me? " he thought. It wasn't a dream. His room, a proper human room although a little too small, lay peacefully between its four familiar walls. A collection of textile samples lay spread out on the table - Samsa was a travelling salesman - and above it there hung a picture that he had recently cut out of an illustrated magazine and housed in a nice, gilded frame.</p>
 
-        <p>Галактика масштабирует внутримолекулярный экситон. Вещество индуцирует солитон. Линза синхронизует коллапсирующий пульсар в том случае, когда процессы переизлучения спонтанны. Расслоение индуцирует ультрафиолетовый лазер одинаково по всем направлениям.</p>
+        <p>It showed a lady fitted out with a fur hat and fur boa who sat upright, raising a heavy fur muff that covered the whole of her lower arm towards the viewer. Gregor then turned to look out the window at the dull weather. Drops of rain could be heard hitting the pane, which made him feel quite sad. "How about if I sleep a little bit longer and forget all this nonsense", he thought, but that was something he was unable to do because he was used to sleeping on his right, and in his present state couldn't get into that position. However hard he threw himself onto his right, he always rolled back to where he was. He must have tried it a hundred times, shut his eyes so that he wouldn't have to look at the floundering legs, and only stopped when</p>
     </div>
 </div>
 </body>
