--- a/shortage.html
+++ b/shortage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <title>Column-experiment</title>
+    <title>Experiments</title>
     <meta name="description" content=""/>
     <style type="text/css">
         .long-name {
@@ -46,11 +46,11 @@
     var str = control.innerHTML
     control.innerHTML = '' +
             '<span class="long-name-wrapper">' +
-            str.slice(0, str.length - 15) +
+            str.slice(0, str.length - 14) +
             '</span>' +
             '<span class="long-name-helper">\n' +
             '<span class="long-name-helper-i">' +
-            str.slice(-15) +
+            str.slice(-14) +
             '</span>\n' +
             '</span>'
 </script>
