--- a/shortage.html
+++ b/shortage.html
@@ -34,7 +34,7 @@
         }
 
         .long-name-helper-i {
-            float: right;
+            float: left;
             display: inline-block;
         }
     </style>
